--- a/index.html
+++ b/index.html
@@ -3,56 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
+    <title>WebStudio</title>
   </head>
   <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
+    <!--topline-->
+    <header class="header">
+        <nav class="nav-header">
+            <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
+    
+            <!-- #menunav -->  
+          <ul class="header-nav-list">
+            <li class="header-nav-item"><a class="header-nav-link" href="">Studio</a></li>
+            <li class="header-nav-item"><a class="header-nav-link" href="">Portfolio</a></li>
+            <li class="header-nav-item"><a class="header-nav-link" href="">Contacts</a></li>
         </ul>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <address class="contact-info">
+            <ul class="contact-info-list">
+                <li class="contact-info-list-item">
+                    <a class="email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="contact-info-list-item">
+                    <a class="phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
         </nav>
     </header>
     
+<!--hero part-->
+ <main>
+    <h1 class="hero">Effective Solutions for Your Business</h1>
+    <button class="hero-btn" type="submit">Order Service</button>
 
-    <h1>Effective Solutions</h1>
-    <h1>for Your Business</h1>
-    <button type="submit">Order Service</button>
+    <!--Section Advantages-->
 
-    <!--Section 1-->
-    <section>
-    <ul>
-        <li>
-        <h3>Strategy</h3>
-        <p>
+    <section class="advantages">
+    <ul class="advantages-list-main">
+        <li class="advantages-list">
+        <h3 class="advantages-list-item">Strategy</h3>
+        <p class="advantages-list-descr">
         Our goal is to identify the business
         problem to walk away with the 
         perfect and creative solution. 
         </p> 
         </li>
-        <li>
-            <h3>Punctuality</h3>
-            <p>
+        <li class="advantages-list">
+            <h3 class="advantages-list-item">Punctuality</h3>
+            <p class="advantages-list-descr">
                 Bring the key message to the 
                 brand's audience for the best price 
                 within the shortest possible time.
             </p>
         </li>
-        <li>
-            <h3>Diligence</h3>
-        <p>
+        <li class="advantages-list">
+            <h3 class="advantages-list-item">Diligence</h3>
+        <p class="advantages-list-descr">
             Research and confirm brands that present the strongest digital 
             growth opportunities and minimize risk. 
         </p>
         </li>
-        <li>
-            <h3>Technologies</h3>
-        <p>
+        <li class="advantages-list">
+            <h3 class="advantages-list-item">Technologies</h3>
+        <p class="advantages-list-descr">
             Design practice focused on digital 
             experiences. We bring forth a deep 
             passion for problem-solving.
@@ -63,39 +80,43 @@
     </section>
 
 <!--Section 2-->
-    <section>  
-    <h1>Our Team</h1>
-    <img src="./images/img_1.jpg" alt="Mark Guerrero" width="264" height="260">
-    <div>
-        <h2>Mark Guerrero</h2>
-        <p>Product Designer</p>
-    </div> 
-    <img src="./images/img_2.jpg" alt="Tom Ford" width="264" height="260">
-    <div> 
-        <h2>Tom Ford</h2> 
-        <p>Frontend Developer</p> 
-    </div> 
-    <img src="./images/img_3.jpg" alt="Camila Garcia" width="264" height="260">
-    <div> 
-        <h2>Camila Garcia</h2> 
-        <p>Marketing</p> </div> 
-    <img src="./images/img_4.jpg" alt="Daniel Wilson" width="264" height="260">
-    <div> 
-        <h2>Daniel Wilson</h2> 
-        <p>UI Designer</p> </div> 
-    </section>
+<section class="team-section">  
+    <h2 class="team-title-main">Our Team</h2>
+<ul class="team-title-list">
+    <li class="team-title-list-item">
+    <img class="team-title-list-photo" src="./images/img_1.jpg" alt="Mark Guerrero" width="264" height="260">
+    <h3 class="team-member-name">Mark Guerrero</h3>
+    <p class="team-member-name-desr">Product Designer</p>
+    </li>
 
-    <footer>
-        <div>
-            <a href="./index.html">WebStudio</a>
-            <img src="./images/Logo.jpg" alt="Logo"
-            width="115" height="24" />
-            <p>
-                Increase the flow of customers and 
-            sales for your business with digital
-            marketing & growth solutions.
-            </p>
-        </div>  
-    </footer>
+    <li class="team-title-list-item">
+    <img class="team-title-list-photo" src="./images/img_2.jpg" alt="Tom Ford" width="264" height="260">
+    <h3 class="team-member-name">Tom Ford</h3> 
+    <p class="team-member-name-desr">Frontend Developer</p> 
+    </li>
+
+    <li class="team-title-list-item">
+    <img class="team-title-list-photo" src="./images/img_3.jpg" alt="Camila Garcia" 
+    width="264" height="260">
+    <h3 class="team-member-name">Camila Garcia</h3> 
+    <p class="team-member-name-desr">Marketing</p> 
+    </li>
+
+    <li class="team-title-list-item">
+    <img class="team-title-list-photo" src="./images/img_4.jpg" alt="Daniel Wilson" 
+    width="264" height="260">
+    <h3 class="team-member-name">Daniel Wilson</h3> 
+    <p class="team-member-name-desr">UI Designer</p> 
+    </li>
+</ul>
+</section>
+</main>
+
+<footer class="section-footer">
+    <a href="./index.html" class="logo">Web<span class="logo-text-footer">Studio</span></a>
+        <p class="section-footer-descr">
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+</footer>
 </body>
 </html>
