--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--topline-->
     <header class="header">
         <nav class="nav-header">
-            <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
+           <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
     
             <!-- #menunav -->  
           <ul class="header-nav-list">
@@ -23,12 +23,12 @@
             <li class="header-nav-item"><a class="header-nav-link" href="">Contacts</a></li>
         </ul>
         <address class="contact-info">
-            <ul class="contact-info-list">
-                <li class="contact-info-list-item">
-                    <a class="email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <ul>
+                <li>
+                    <a class="contact-info-list" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="contact-info-list-item">
-                    <a class="phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <li>
+                    <a class="contact-info-list" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
