--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <!--topline-->
     <header class="header">
         <nav class="nav-header">
-           <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
+           <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
     
             <!-- #menunav -->  
-          <ul class="header-nav-list">
+        <ul class="header-nav-list">
             <li class="header-nav-item"><a class="header-nav-link" href="">Studio</a></li>
             <li class="header-nav-item"><a class="header-nav-link" href="">Portfolio</a></li>
             <li class="header-nav-item"><a class="header-nav-link" href="">Contacts</a></li>
         </ul>
+        </nav>
         <address class="contact-info">
             <ul>
                 <li>
@@ -32,7 +33,6 @@
                 </li>
             </ul>
         </address>
-        </nav>
     </header>
     
 <!--hero part-->
