--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <!--topline-->
     <header class="header">
         <nav class="nav-header">
-           <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
-    
-            <!-- #menunav -->  
         <ul class="header-nav-list">
+           <li><a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a></li>
+            <!-- #menunav -->  
             <li class="header-nav-item"><a class="header-nav-link" href="">Studio</a></li>
             <li class="header-nav-item"><a class="header-nav-link" href="">Portfolio</a></li>
             <li class="header-nav-item"><a class="header-nav-link" href="">Contacts</a></li>
