--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
   <body>
     <!--topline-->
     <header class="header">
-        <nav class="nav-header">
-        <ul class="header-nav-list">
-           <li><a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a></li>
-            <!-- #menunav -->  
-            <li class="header-nav-item"><a class="header-nav-link" href="">Studio</a></li>
-            <li class="header-nav-item"><a class="header-nav-link" href="">Portfolio</a></li>
-            <li class="header-nav-item"><a class="header-nav-link" href="">Contacts</a></li>
+        <nav>
+        <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a></li>
+           <ul>
+            <li><a class="header-nav-link" href="./index.html">Studio</a></li>
+            <li><a class="header-nav-link" href="">Portfolio</a></li>
+            <li><a class="header-nav-link" href="">Contacts</a></li>
         </ul>
         </nav>
         <address class="contact-info">
