--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
         </address>
     </header>
     
-<!--hero part-->
+<!--Section 1-->
  <main>
+    <section class="section-hero">
     <h1 class="hero">Effective Solutions for Your Business</h1>
-    <button class="hero-btn" type="submit">Order Service</button>
+    <button class="hero-btn" type="button">Order Service</button>
+    </section>
 
-    <!--Section Advantages-->
+    <!--Section 2-->
 
     <section class="advantages">
     <ul class="advantages-list-main">
