--- a/index.html
+++ b/index.html
@@ -11,112 +11,104 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <!--topline-->
-    <header class="header">
+    <header>
         <nav>
-        <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a></li>
-           <ul>
-            <li><a class="header-nav-link" href="./index.html">Studio</a></li>
-            <li><a class="header-nav-link" href="">Portfolio</a></li>
-            <li><a class="header-nav-link" href="">Contacts</a></li>
+            <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
+        <ul>
+          <li><a class="header-nav-link" href="./index.html">Studio</a></li>
+          <li><a class="header-nav-link" href="">Portfolio</a></li>
+          <li><a class="header-nav-link" href="">Contacts</a></li>
         </ul>
         </nav>
-        <address class="contact-info">
+        <address class="contact">
             <ul>
-                <li>
-                    <a class="contact-info-list" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="contact-info-list" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
+              <li>
+              <a class="contact-one" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li>
+              <a class="contact-one" href="tel:+110001111111">+11 (000) 111-11-11</a>
+              </li>
             </ul>
         </address>
     </header>
     
-<!--Section 1-->
- <main>
-    <section class="section-hero">
-    <h1 class="hero">Effective Solutions for Your Business</h1>
-    <button class="hero-btn" type="button">Order Service</button>
+    <main>
+    <!--Section 1-->
+    <section>
+    <h1>Effective Solutions for Your Business</h1>
+    <button type="button">Order Service</button>
     </section>
 
     <!--Section 2-->
-
-    <section class="advantages">
-    <ul class="advantages-list-main">
-        <li class="advantages-list">
-        <h3 class="advantages-list-item">Strategy</h3>
-        <p class="advantages-list-descr">
-        Our goal is to identify the business
-        problem to walk away with the 
-        perfect and creative solution. 
-        </p> 
-        </li>
-        <li class="advantages-list">
-            <h3 class="advantages-list-item">Punctuality</h3>
-            <p class="advantages-list-descr">
-                Bring the key message to the 
-                brand's audience for the best price 
-                within the shortest possible time.
+    
+    <section>
+        <h2>/</h2>
+        <ul>
+           <li>
+            <h3>Strategy</h3>
+            <p>
+                Our goal is to identify the business problem to walk away with the perfect and creative solution. 
+            </p> 
+           </li>
+            <li>
+            <h3>Punctuality</h3>
+            <p>
+                Bring the key message to the brand's audience for the best price within the shortest possible time.
             </p>
-        </li>
-        <li class="advantages-list">
-            <h3 class="advantages-list-item">Diligence</h3>
-        <p class="advantages-list-descr">
-            Research and confirm brands that present the strongest digital 
-            growth opportunities and minimize risk. 
-        </p>
-        </li>
-        <li class="advantages-list">
-            <h3 class="advantages-list-item">Technologies</h3>
-        <p class="advantages-list-descr">
-            Design practice focused on digital 
-            experiences. We bring forth a deep 
-            passion for problem-solving.
-        </p>
-        </li>
-    </ul>
-   
+            </li>
+            <li>
+            <h3>Diligence</h3>
+            <p> 
+                Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+            </p>
+            </li>
+            <li>
+            <h3>Technologies</h3>
+            <p> 
+                Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+            </p>
+            </li>
+        </ul>
     </section>
 
 <!--Section 2-->
-<section class="team-section">  
-    <h2 class="team-title-main">Our Team</h2>
-<ul class="team-title-list">
-    <li class="team-title-list-item">
-    <img class="team-title-list-photo" src="./images/img_1.jpg" alt="Mark Guerrero" width="264" height="260">
-    <h3 class="team-member-name">Mark Guerrero</h3>
-    <p class="team-member-name-desr">Product Designer</p>
-    </li>
+    <section>  
+        <h2>Our Team</h2>
+    <ul>
+        <li>
+        <img src="./images/img_1.jpg" alt="Mark Guerrero" width="264" height="260">
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
+        </li>
 
-    <li class="team-title-list-item">
-    <img class="team-title-list-photo" src="./images/img_2.jpg" alt="Tom Ford" width="264" height="260">
-    <h3 class="team-member-name">Tom Ford</h3> 
-    <p class="team-member-name-desr">Frontend Developer</p> 
-    </li>
+        <li>
+        <img src="./images/img_2.jpg" alt="Tom Ford" width="264" height="260">
+        <h3>Tom Ford</h3> 
+        <p>Frontend Developer</p> 
+        </li>
 
-    <li class="team-title-list-item">
-    <img class="team-title-list-photo" src="./images/img_3.jpg" alt="Camila Garcia" 
-    width="264" height="260">
-    <h3 class="team-member-name">Camila Garcia</h3> 
-    <p class="team-member-name-desr">Marketing</p> 
-    </li>
+        <li>
+        <img src="./images/img_3.jpg" alt="Camila Garcia" 
+        width="264" height="260">
+        <h3>Camila Garcia</h3> 
+        <p>Marketing</p> 
+        </li>
 
-    <li class="team-title-list-item">
-    <img class="team-title-list-photo" src="./images/img_4.jpg" alt="Daniel Wilson" 
-    width="264" height="260">
-    <h3 class="team-member-name">Daniel Wilson</h3> 
-    <p class="team-member-name-desr">UI Designer</p> 
-    </li>
-</ul>
-</section>
+        <li>
+        <img src="./images/img_4.jpg" alt="Daniel Wilson" 
+        width="264" height="260">
+        <h3>Daniel Wilson</h3> 
+        <p>UI Designer</p> 
+        </li>
+    </ul>
+    </section>
 </main>
 
-<footer class="section-footer">
-    <a href="./index.html" class="logo">Web<span class="logo-text-footer">Studio</span></a>
-        <p class="section-footer-descr">
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
-</footer>
+    <footer>
+            <a href="./index.html">WebStudio</a>
+            <p>
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            </p>
+    </footer>
 </body>
 </html>
