--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body>
     <header>
         <nav>
-            <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
         <ul>
+          <li><a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a></li>
           <li><a class="header-nav-link" href="./index.html">Studio</a></li>
           <li><a class="header-nav-link" href="">Portfolio</a></li>
           <li><a class="header-nav-link" href="">Contacts</a></li>
