--- a/index.html
+++ b/index.html
@@ -13,23 +13,27 @@
   <body>
     <header>
         <nav>
+        <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
         <ul>
-          <li><a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a></li>
           <li><a class="header-nav-link" href="./index.html">Studio</a></li>
           <li><a class="header-nav-link" href="">Portfolio</a></li>
           <li><a class="header-nav-link" href="">Contacts</a></li>
         </ul>
         </nav>
-        <address class="contact">
+        <address class="address-head">
             <ul>
               <li>
-              <a class="contact-one" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="address-link"
+                  >info@devstudio.com</a
+                >
               </li>
               <li>
-              <a class="contact-one" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a href="tel:+110001111111" class="address-link"
+                  >+11 (000) 111-11-11</a
+                >
               </li>
             </ul>
-        </address>
+          </address>
     </header>
     
     <main>
