--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
   </head>
   <body>
     <header>
-        <nav>
-        <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
+     <nav>
+        <a class="logo" href="./index.html">Web<span class="logo-span">Studio</span></a>
         <ul>
           <li><a class="header-nav-link" href="./index.html">Studio</a></li>
           <li><a class="header-nav-link" href="">Portfolio</a></li>
           <li><a class="header-nav-link" href="">Contacts</a></li>
         </ul>
-        </nav>
-        <address class="address-head">
+     </nav>
+        <address class="contact_details">
             <ul>
               <li>
-                <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="contact-info-list" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
               <li>
-                <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="contact-info-list" href="tel:+110001111111">+11 (000) 111-11-11</a>
               </li>
             </ul>
           </address>
