--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <body>
     <header>
      <nav>
+      <ul>
         <a class="logo" href="./index.html">Web<span class="logo_subtext">Studio</span></a>
-        <ul>
           <li><a class="header-nav-link" href="./index.html">Studio</a></li>
           <li><a class="header-nav-link" href="">Portfolio</a></li>
           <li><a class="header-nav-link" href="">Contacts</a></li>
         </ul>
      </nav>
-        <address class="contact_details">
+        <address class="contact-details">
             <ul>
               <li>
                 <a class="contact-info-list" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -42,29 +42,29 @@
 
     <!--Section 2-->
     <section class="advantages-section">
-        <h2 class="advantages-list-name">Advantages</h2>
+        <h2 hidden class="advantages-list-name">Advantages</h2>
         <ul class="advantages-list-main">
            <li class="advantages-list">
             <h3 class="advantages-list-item">Strategy</h3>
-            <p>
+            <p class="advantages-list-descr" class="advantages-list-descr">
                 Our goal is to identify the business problem to walk away with the perfect and creative solution. 
             </p> 
            </li>
-            <li>
-            <h3>Punctuality</h3>
-            <p>
+            <li class="advantages-list">
+            <h3 class="advantages-list-item">Punctuality</h3>
+            <p class="advantages-list-descr">
                 Bring the key message to the brand's audience for the best price within the shortest possible time.
             </p>
             </li>
-            <li>
-            <h3>Diligence</h3>
-            <p> 
+            <li class="advantages-list">
+            <h3 class="advantages-list-item">Diligence</h3>
+            <p class="advantages-list-descr"> 
                 Research and confirm brands with the strongest digital growth opportunities and minimize risk.
             </p>
             </li>
-            <li>
-            <h3>Technologies</h3>
-            <p> 
+            <li class="advantages-list">
+            <h3 class="advantages-list-item">Technologies</h3>
+            <p class="advantages-list-descr"> 
                 Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
             </p>
             </li>
@@ -72,71 +72,78 @@
     </section>
 
 <!--Section 3-->
-    <section>  
-        <h2>Our Team</h2>
-    <ul>
-        <li>
+    <section class="team-section">  
+
+        <h2 class="team-title-main">Our Team</h2>
+    <ul class="team-title-list">
+        <li class="team-title-list-item">
         <img src="./images/img_1.jpg" alt="Mark Guerrero" width="264" height="260">
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
+        <h3 class="team-member-name">Mark Guerrero</h3>
+        <p class="team-member-name-desr">Product Designer</p>
         </li>
 
-        <li>
+        <li class="team-title-list-item">
         <img src="./images/img_2.jpg" alt="Tom Ford" width="264" height="260">
-        <h3>Tom Ford</h3> 
-        <p>Frontend Developer</p> 
+        <h3 class="team-member-name">Tom Ford</h3> 
+        <p class="team-member-name-desr">Frontend Developer</p> 
         </li>
 
-        <li>
+        <li class="team-title-list-item">
         <img src="./images/img_3.jpg" alt="Camila Garcia" 
         width="264" height="260">
-        <h3>Camila Garcia</h3> 
-        <p>Marketing</p> 
+        <h3 class="team-member-name">Camila Garcia</h3> 
+        <p class="team-member-name-desr">Marketing</p> 
         </li>
 
-        <li>
+        <li class="team-title-list-item">
         <img src="./images/img_4.jpg" alt="Daniel Wilson" 
         width="264" height="260">
-        <h3>Daniel Wilson</h3> 
-        <p>UI Designer</p> 
+        <h3 class="team-member-name">Daniel Wilson</h3> 
+        <p class="team-member-name-desr">UI Designer</p> 
         </li>
     </ul>
     </section>
 
-    <section>
-      <h2>Our Portfolio</h2>
-      <ul>
+    <section class="portfolio-section">
+      <h2 class="portfolio-section-title">Our Portfolio</h2>
+      <ul class="portfolio-section-list">
        <li>
-        <h3>Banking App</h3>
-        <p>App</p>
+        <img src="./images/portfolio1.jpg" alt="Apps" width="360" height="300">
+        <h3 class="portfolio-list-item">Banking App</h3>
+        <p class="portfolio-list-description">App</p>
        </li>
        <li>
-        <h3>Cashless Payment</h3>
-        <p>Marketing</p>
+        <img src="./images/portfolio2.jpg" alt="cashless payment" width="360" height="300">
+        <h3 class="portfolio-list-item">Cashless Payment</h3>
+        <p class="portfolio-list-description">Marketing</p>
       </li>
        <li>
-        <h3>Meditation App</h3>
-        <p>App</p>
+        <img src="./images/portfolio3.jpg" alt="meditation app" width="360" height="300">
+        <h3 class="portfolio-list-item">Meditation App</h3>
+        <p class="portfolio-list-description">App</p>
       </li>
        <li>
-        <h3>Taxi Service</h3>
-        <p>Marketing</p>
+        <img src="./images/portfolio4.jpg" alt="taxi service" width="360" height="300">
+        <h3 class="portfolio-list-item">Taxi Service</h3>
+        <p class="portfolio-list-description">Marketing</p>
       </li>
        <li>
-        <h3>Screen Illustrations</h3>
-        <p>Design</p>
+        <img src="./images/portfolio5.jpg" alt="screen illustration" width="360" height="300">
+        <h3 class="portfolio-list-item">Screen Illustrations</h3>
+        <p class="portfolio-list-description">Design</p>
       </li>
        <li>
-        <h3>Online Courses</h3>
-        <p>Marketing</p>
+        <img src="./images/portfolio6.jpg" alt="online courses">
+        <h3 class="portfolio-list-item">Online Courses</h3>
+        <p class="portfolio-list-description">Marketing</p>
       </li>
       </ul>
     </section>
 </main>
 
-    <footer>
-            <a href="./index.html">WebStudio</a>
-            <p>
+    <footer class="section-footer">
+            <a href="./index.html" class="logo">Web<span class="logo-text-footer">Studio</span></a>
+            <p class="section-footer-descr">
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
     </footer>
